[skip] Fixed alignment of instructions with labels in the New Release form (1m)

--- a/app/assets/stylesheets/application/releases.scss
+++ b/app/assets/stylesheets/application/releases.scss
@@ -145,3 +145,7 @@
     }
   }
 }
+
+#new_release_form {
+  .instructions { margin-top: 0; }
+}
